--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Memoir Lane</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 </head>
-
 <body>
-    <h3>All Chats!</h3>
-    <form action="/chats/new" method="get">
-        <button>New Chat</button>
-    </form>
-    <% for(let chat of chats) { %>
-        <div class="chat">
-            <p>From: <i><%= chat.from %></i></p>
-            <div class="msg">
-                <p><%= chat.msg %></p>
-                <div class="actions">
-                    <div class="button-group">
-                        <form action="/chats/<%= chat._id %>/edit" method="get">
-                            <button>Edit</button>
-                        </form>
-                        <form action="/chats/<%= chat._id %>?_method=DELETE" method="post">
-                            <button>Delete</button>
-                        </form>
+
+    <nav class="navbar">
+        <div class="nav-left">
+            <a href="/" class="logo">Memoir Lane</a>
+        </div>
+        <div class="nav-right">
+            <span>Welcome, <%= user.username %></span>
+            <a href="/logout" class="logout-btn">Logout</a>
+        </div>
+    </nav>
+
+    <main>
+        <h3>Moments You've Captured</h3>
+        <form action="/chats/new" method="get">
+            <button>Start Writing</button>
+        </form>
+
+        <% for(let chat of chats) { %>
+            <div class="chat">
+                <div class="msg">
+                    <p><%= chat.msg %></p>
+                    <div class="actions">
+                        <div class="button-group">
+                            <form action="/chats/<%= chat._id %>/edit" method="get">
+                                <button>Edit</button>
+                            </form>
+                            <form action="/chats/<%= chat._id %>?_method=DELETE" method="post">
+                                <button>Delete</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
+                <hr />
+                <p><%= chat.created_at.toString().split(" ")[4] %></p>
+                <p><%= chat.created_at.toString().split(" ").slice(0, 4).join("-") %></p>
             </div>
-            <p>Received by: <i><%= chat.to %></i></p>
-            <hr />
-            <p><%= chat.created_at.toString().split(" ")[4] %></p>
-            <p><%= chat.created_at.toString().split(" ").slice(0, 4).join("-") %></p>
-        </div>
-    <% } %>
-</body>
+        <% } %>
+    </main>
 
+</body>
 </html>
