--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,19 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Write New Chat</title>
     <link rel="stylesheet" href="/new.css">
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
-        <h3>Start a New Chat</h3>
+        <h3>Share What's on Your Mind</h3>
         <form action="/chats" method="post" class="chat-form">
             <div class="form-group">
-                <input type="text" name="from" placeholder="Who are you?" required />
-            </div>
-            <div class="form-group">
                 <textarea name="msg" placeholder="Write your message here..." required></textarea>
-            </div>
-            <div class="form-group">
-                <input type="text" name="to" placeholder="Add receiver" required />
             </div>
             <button type="submit" class="submit-btn">Create Chat</button>
         </form>
