--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit your chat</title>
     <link rel="stylesheet" href="/edit.css">
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
-        <h3>Edit your chat: <%= chat._id %></h3>
-        <p>This chat was sent from <%= chat.from %> to <%= chat.to %></p>
+        <h3>Revisit and Revise Your Thought</h3>
         <form method="post" action="/chats/<%= chat._id %>?_method=put" class="chat-form">
             <div class="form-group">
                 <textarea name="msg" rows="5" placeholder="Edit your message..."><%= chat.msg %></textarea>
